fixed Overflow description and added '...'

--- a/css/styleboard.css
+++ b/css/styleboard.css
@@ -572,7 +572,14 @@
   font-size: 16px;
   line-height: 19.2px;
   color: rgba(168, 168, 168, 1);
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+  white-space: normal; /* Standardmäßig sollte dies auf "normal" gesetzt sein */
+  text-overflow: ellipsis; /* Füge "..." am Ende des abgeschnittenen Textes hinzu */
 }
+
 
 
 .progress-bar {
